--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                     </em>
                     <br/>~ Steve Jobs</blockquote>
 
-                <p>I love to build great tools that enable greater business success.</p>
-                <p>I have invested over a decade solving business problems and capturing value in the entertainment, education,
-                    consumer goods, marketing, nonprofit, and hospitality industries using a
+                <p>I love to help businesses reach their highest potential, often with well-crafted mobile, web, and cloud-based solutions.</p>
+                <p>I have invested over a decade solving business problems and capturing value for businesses in the entertainment, education,
+                    consumer goods, consumer software, marketing, nonprofit, and hospitality industries using a
                     <a href="#portfolio">wide variety of tools and strategies</a>.</p>
                 <p>I love to teach, read, cook, listen to great music, and
                     <a href="http://blog.brentjanderson.com">write</a>.</p>
@@ -123,15 +123,22 @@
         <div class="row-fluid">
             <div class="span12">
                 <h3>What I do</h3>
-                <p>I am the Technology Manager at
-                    <a href="https://www.blenderbottle.com" target="_blank">BlenderBottle</a>, a fast-growing global leader in the health and fitness industry. Outside of management
-                    duties, I am our software and information architect, and enjoy improving our business processes and consumer
-                    experience through great technology.</p>
+                <p>I am presently a Sr. Software Engineer focusing on backend solutions at <a href="https://yours.co">Yours.co</a>, a startup company aimed
+                    at helping individuals and families capture and remember the moments that made them who they are in the best possible way.
+                    Among the many hats I wear, I provide senior technical leadership to produce the best software, machine learning, and cloud products
+                    possible, and have a lot of fun doing it.</p>
+
+                <p>Previously, I was the Technology Manager at
+                    <a href="https://www.blenderbottle.com" target="_blank">BlenderBottle</a>.
+                    In this role, I built and led an outstanding technology team that provided expert consulting and results in data science, software engineering, and 
+                    technology operations. I helped lead BlenderBottle in year-over-year annual growth, implement new ERP and enterprise operations software, the construction of a global campus in Lehi, Utah,
+                    and expansion into new markets and opportunities.</p>
+
                 <p>I recently completed a Master's degree in Information Systems Management at
                     <a href="http://www.byu.edu" target="_blank">Brigham Young University</a>, emphasizing in Business Intelligence and Analytics.</p>
 
                 <p>
-                    I recently served on the board of
+                    I also served on the board of
                     <a href="http://www.spaceedventures.org">a local non-profit</a> and sold apps on the Apple App Store and Google Play stores - some of which were
                     ranked in the top-ten. I have also provided consulting services to startup, governmental, national, and
                     multinational organizations, advising on technical strategy, developing web and mobile applications using
@@ -229,28 +236,28 @@
 
             <div class="row-fluid">
                 <div class="span4">
-                    <h5>BlenderBottle Contest</h5>
+                    <h5>BlenderBottle</h5>
                     <a href="#" target="_blank">
                         <img class="img-polaroid" src="/img/portfolio/bb-contest.png" />
                     </a>
-                    <p>I developed backend infrastructure for a very successful Facebook marketing campaign that brought in
-                        thousands of entries.</p>
+                    <p>I built and led a team that developed excellent software products supporting millions of customers around the world.</p>
                 </div>
                 <div class="span4">
                     <h5>Software &amp; Enterprise Engineering</h5>
                     <a href="https://www.github.com/brentjanderson" target="_blank">
                         <img class="img-polaroid" src="/img/portfolio/code.jpg" />
                     </a>
-                    <p>I am well versed in Objective-C/Swift, iOS, Cocoa, HTML5, CSS3, Javascript, Databases, React &amp; Native,
-                        PHP, NodeJS, Docker, Kubernetes and more. I provide compelling leadership strategy that combines
-                        business, technical, and interpersonal constraints and requirements.</p>
+                    <p>I am expert-level in the development and deployment of cloud-native solutions using a wide alphabet soup of 
+                        technologies and strategies, including NodeJS, Docker, Kubernetes, SQL and NoSQL databases, React &amp; React Native,
+                        PHP, CI/CD, and more. I provide compelling leadership strategy that combines
+                        business, technical, and interpersonal constraints and requirements to produce the right solutions at the right time.</p>
                 </div>
                 <div class="span4">
                     <h5>Build For Growth</h5>
                     <a href="https://www.github.com/brentjanderson" target="_blank">
                         <img class="img-polaroid" src="/img/portfolio/amazon.png" />
                     </a>
-                    <p>I have experience deploying elastically scalable applications to Amazon Web Services and other public
+                    <p>I have experience deploying elastically scalable applications to Amazon Web Services, Google Cloud, Microsoft Azure, and other public
                         and private cloud infrastructure.</p>
                 </div>
             </div>
