--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
                     at helping individuals and families capture and remember the moments that made them who they are in the best possible way.
                     Among the many hats I wear, I provide senior technical leadership to produce the best software, machine learning, and cloud products
                     possible, and have a lot of fun doing it.</p>
+                
+                <p>In my spare time, my wife and I operate <a href="https://www.coriaria.com/">Coriaria</a>, an experiment in building and running a 
+                    business squarely aimed at creating products that strengthen families through empowered human connection. Our first product,
+                    <a href="https://www.everflect.com">Everflect</a>, helps couples take time to talk through goals, praise, challenges, and document
+                    the conversation. My wife and I collaborate on all parts of the business and products, however I lead our legal, accounting, and
+                    technical matters.
+                </p>
 
                 <p>Previously, I was the Technology Manager at
                     <a href="https://www.blenderbottle.com" target="_blank">BlenderBottle</a>.
@@ -139,7 +146,7 @@
 
                 <p>
                     I also served on the board of
-                    <a href="http://www.spaceedventures.org">a local non-profit</a> and sold apps on the Apple App Store and Google Play stores - some of which were
+                    <a href="http://www.spaceedventures.org">a local non-profit</a>, and sold apps on the Apple App Store and Google Play stores - some of which were
                     ranked in the top-ten. I have also provided consulting services to startup, governmental, national, and
                     multinational organizations, advising on technical strategy, developing web and mobile applications using
                     the latest technologies and architectures.
