--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.linkedin.com/profile/view?id=10341225" class="ba-tooltip" title="LinkedIn" target="_blank">
+                            <a href="https://www.linkedin.com/in/brentj84062" class="ba-tooltip" title="LinkedIn" target="_blank">
                                 <img src="img/nav/linkedin.png" alt="LinkedIn" />
                             </a>
                         </li>
@@ -71,7 +71,7 @@
                                 <i class="icon-file"></i> My Blog</a>
                         </li>
                         <li>
-                            <a href="http://www.linkedin.com/profile/view?id=10341225" target="_blank">
+                            <a href="https://www.linkedin.com/in/brentj84062" target="_blank">
                                 <i class="icon-briefcase"></i> LinkedIn</a>
                         </li>
                         <li>
